<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:background="@color/roxo"
    tools:context=".activity.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableStart="@drawable/baseline_directions_car_filled_24" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/logintxt"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-black"/>

    <EditText
        android:id="@+id/etLoginMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/mail"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/mail"
        android:fontFamily="sans-serif"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/senha"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:onClick="validaLogin"
        android:text="@string/btnLogin"
        android:textColor="@color/roxo"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnIrCadastro"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/roxo"
        android:textSize="16sp"
        android:layout_marginHorizontal="50dp"
        android:onClick="criarCadastro"
        android:text="@string/btnCadastro" />

</LinearLayout>
