<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="120dp"
        android:fontFamily="sans-serif-black"
        android:padding="20dp"
        android:text="@string/titulo_edit"
        android:textColor="@color/roxo"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnUpdateCarro"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:drawableTop="@drawable/baseline_save_24" />

    <EditText
        android:id="@+id/etUpdMarca"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/puple_border"
        android:hint="@string/marca"
        android:inputType="text"
        android:padding="16dp" />

    <EditText
        android:id="@+id/etUpdModelo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/etUpdMarca"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/puple_border"
        android:hint="@string/modelo"
        android:inputType="text"
        android:padding="16dp" />

    <EditText
        android:id="@+id/etUpdAno"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/etUpdModelo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/puple_border"
        android:hint="@string/ano"
        android:inputType="number"
        android:padding="16dp" />

    <EditText
        android:id="@+id/etUpdCor"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/etUpdAno"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/puple_border"
        android:hint="@string/cor"
        android:inputType="text"
        android:padding="16dp" />

    <EditText
        android:id="@+id/etUpdPlaca"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/etUpdCor"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/puple_border"
        android:hint="@string/placa"
        android:inputType="text"
        android:padding="16dp" />

    <EditText
        android:id="@+id/etUpdNomeProprietario"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/etUpdPlaca"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/puple_border"
        android:hint="@string/nomeProp"
        android:inputType="text"
        android:padding="16dp" />

    <EditText
        android:id="@+id/etUpdObs"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/etUpdNomeProprietario"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/puple_border"
        android:hint="@string/obs"
        android:inputType="text"
        android:padding="16dp" />

</RelativeLayout>