<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/cardLayout">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/roxo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/white_border"
            android:padding="12dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">



            <TextView
                android:id="@+id/lista_marca_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/marca"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lista_modelo_text"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:text="@string/modelo"
                app:layout_constraintStart_toEndOf="@+id/lista_marca_text"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lista_ano_text"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_marginStart="250dp"
                android:layout_marginEnd="20dp"
                android:text="@string/ano"
                app:layout_constraintStart_toEndOf="@+id/lista_modelo_text"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lista_cor_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/cor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lista_marca_text" />

            <TextView
                android:id="@+id/lista_placa_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginStart="80dp"
                android:text="@string/placa"
                app:layout_constraintStart_toEndOf="@+id/lista_cor_text"
                app:layout_constraintTop_toBottomOf="@+id/lista_modelo_text" />

            <TextView
                android:id="@+id/lista_proprietario_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomeProp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lista_cor_text" />

            <TextView
                android:id="@+id/lista_obs_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:textColor="@color/white"
                android:text="@string/obs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lista_proprietario_text" />

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/roxo"
                android:drawableTop="@drawable/edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnDelete"/>

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="7dp"
                android:backgroundTint="@color/roxo"
                android:drawableTop="@drawable/delete"
                app:layout_constraintBottom_toTopOf="@+id/btnEdit"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>