<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/roxo"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:padding="10dp"
        android:text="@string/tituloMain"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:fontFamily="sans-serif-black" />
    <TextView
        android:id="@+id/desc"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        android:text="@string/descMain"
        android:layout_below="@id/title"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/desc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        android:text="@string/desc2Main"
        android:layout_below="@id/desc"
        android:textSize="16sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lista"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/desc2"
        android:layout_marginTop="-32dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddCarro"
        android:layout_width="78dp"
        android:layout_height="99dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/add_new"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:drawableTop="@drawable/logout"
        android:backgroundTint="@color/roxo"
         />

</RelativeLayout>